--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,11 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/jquery/dist/jquery.slim.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -115,6 +119,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "Recipe-and-Shopping-List"
 }
